  if TABLE_OUTPUT is omitted, then SCIP tries to print a table from the data given by TABLE_COLLECT
- new event SCIP_EVENTTYPE_IMPLTYPECHANGED, which is generated if a variable its implied integer type changes. This event is also included in the set of events that trigger SCIP_EVENTTYPE_VARCHANGED
- the event SCIP_EVENTTYPE_TYPECHANGED is no longer generated if a variable becomes implied integer

### Deleted and changed API methods

- SCIPgetProbvarLinearSum: remove parameter mergemultiples, which is now automatically true with the new implementation of SCIPvarGetActiveRepresentatives.
- SCIPcreateRow*(), SCIPaddVarToRow(), SCIPaddVarsToRow(), SCIPaddVarsToRowSameCoef() can now only be called in the solving stage,
  because otherwise the LP is not yet available and the row data is invalid.
- intvar removed from arguments for SCIPcreateConsPseudobooleanWithConss(), SCIPcreateConsPseudoboolean(), and SCIPcreateConsBasicPseudoboolean() due to dysfunctionality of non-linear objective reformulation with pseudoboolean constraint
- ndelconss added to arguments for SCIPcleanupConssLinear() and SCIPcleanupConssKnapsack() to directly delete empty redundant constraints before creating problem matrix
- copyiisfinders added to arguments for SCIPcopyPlugins() (16th position)
- SCIPcreateConsOrbitope() deleted two arguments and changed position of another argument
- deprecated SCIPsubversion(), will be removed
- (Temporarily supported until SCIP 11): SCIPchgVarType() converts a call with type SCIP_VARTYPE_IMPLINT into a call of SCIPchgVarImplType() with type SCIP_VARIMPLTYPE_WEAK.
- (Temporarily supported until SCIP 11): Creating a variable SCIPcreateVar() with type SCIP_VARTYPE_IMPLINT creates a variable of type SCIP_VARTYPE_CONTINUOUS and implied integer type SCIP_VARIMPLTYPE_WEAK instead.
- SCIPvarCalcDistributionParameters(): enum argument vartype is replaced with boolean argument varintegral