@@ -154,7 +154,7 @@ SCIP_RETCODE SCIPexprhdlrIntegralityExpr(
    SCIP_EXPRHDLR*        exprhdlr,           /**< expression handler */
    SCIP_SET*             set,                /**< global SCIP settings */
    SCIP_EXPR*            expr,               /**< expression to check integrality for */
-   SCIP_Bool*            isintegral          /**< buffer to store whether expression is integral */
+   SCIP_EXPRINT*         integralitylevel    /**< buffer to store the integrality level of the expression */
    );
 
 /** calls the hash callback of an expression handler
