@@ -406,7 +406,8 @@ SCIP_DECL_EXPRESTIMATE(estimateLog)
             refpoint[0] = 0.1;
       }
 
-      addLogLinearization(scip, refpoint[0], SCIPexprIsIntegral(SCIPexprGetChildren(expr)[0]), coefs, constant, success);
+      addLogLinearization(scip, refpoint[0], SCIPexprGetIntegrality(SCIPexprGetChildren(expr)[0]) != SCIP_EXPRINT_NONE,
+                          coefs, constant, success);
       *islocal = FALSE; /* linearization is globally valid */
       *branchcand = FALSE;
    }
@@ -473,7 +474,8 @@ SCIP_DECL_EXPRINITESTIMATES(initestimatesLog)
       {
          assert(i < 3);
          /* coverity[overrun] */
-         addLogLinearization(scip, refpointsover[i], SCIPexprIsIntegral(child), coefs[*nreturned], &constant[*nreturned], &success); /*lint !e661*/
+         addLogLinearization(scip, refpointsover[i], SCIPexprGetIntegrality(child) != SCIP_EXPRINT_NONE,
+                             coefs[*nreturned], &constant[*nreturned], &success); /*lint !e661*/
          if( success )
          {
             SCIPdebugMsg(scip, "init overestimate log(x) at x=%g -> %g*x+%g\n", refpointsover[i], coefs[*nreturned][0], constant[*nreturned]);
