@@ -135,14 +135,16 @@ struct SCIP_Expr
    SCIP_Longint          activitytag;        /**< tag of variable bounds for which activity is valid */
 
    /* curvature information */
-   SCIP_EXPRCURV         curvature;           /**< curvature of the expression w.r.t. bounds that have been used in the last curvature detection */
+   SCIP_EXPRCURV         curvature;          /**< curvature of the expression w.r.t. bounds that have been used in the last curvature detection */
 
    /* integrality information */
-   SCIP_Bool             isintegral;          /**< whether expression value is integral in feasible solutions */
+   SCIP_EXPRINT          integralitylevel;   /**< indicates whether the expression is integral. 0: not integral,
+                                               *< 1: integral but contains weak implied integers. 2: integral without
+                                               *< weak implied integers */
 
    /* view expression as quadratic */
-   SCIP_QUADEXPR*        quaddata;            /**< representation of expression as a quadratic, if checked and being quadratic */
-   SCIP_Bool             quadchecked;         /**< whether it has been checked whether the expression is quadratic */
+   SCIP_QUADEXPR*        quaddata;           /**< representation of expression as a quadratic, if checked and being quadratic */
+   SCIP_Bool             quadchecked;        /**< whether it has been checked whether the expression is quadratic */
 };
 
 /** representation of an expression as quadratic */
